# asteroid

./: .gitignore  CMakeLists.txt  README.md  asteroidsTraits.csv  files.c  files.h  main.c  main_api.h  particles.c  particles.h
Asteroids/: asteroids.c  asteroids.h
Menu/: menu.c  menu.h
Player/: player.c  player.h
game/: CMakeLists.txt  game.c
game/core/: CMakeLists.txt
game/core/asteroid/: CMakeLists.txt
game/core/asteroid/include/: asteroid.h  asteroid_array.h  asteroid_event.h  asteroid_explosion_rule.h  asteroid_preset.h  asteroid_size.h  asteroid_vertice_array.h  asteroid_vertice_pool.h  asteroid_wave_spawn_rule.h  wave.h
game/core/asteroid/src/: asteroid.c  asteroid_array.c  asteroid_event.c  asteroid_preset.c  asteroid_vertice_array.c  asteroid_vertice_pool.c  asteroid_wave_spawn_rule.c  wave.c
game/core/include/: asteroid.h  bullet.h  bullet_array.h  components.h  entity_info.h  game_math.h  particle.h  player.h
game/core/src/: asteroid.c  bullet_array.c  particle.c  player.c
game/event/: CMakeLists.txt
game/event/event_api/: CMakeLists.txt  event_api.h
game/event/event_sink/: CMakeLists.txt  event_sink.c  event_sink_api.h
game/event/include/: asteroid_bullet_hit_event.h  asteroid_bullet_hit_event_queue.h  player_asteroid_hit_event.h  player_asteroid_hit_event_queue.h
game/event/src/: asteroid_bullet_hit_event_queue.c  player_asteroid_hit_event_queue.c
game/game_loop/: CMakeLists.txt
game/game_loop/include/: asteroid_explosion_rule.h  asteroid_wave_spawn_rule.h  game_loop.h  player_rules.h  wave.h
game/game_loop/src/: asteroid_explosion_rule.c  asteroid_wave_spawn_rule.c  game_loop.c  player_rules.c  wave.c
game/include/: game_api.h
game/logger/: CMakeLists.txt
game/logger/include/: log_color.h
game/logger/include/api/: logger.h
game/logger/src/: logger.c
game/menu/: CMakeLists.txt
game/menu/include/: menu.h  menu_style.h  overlay.h  overlay_stack.h  overlays.h  screen.h  screen_context.h  screen_virtual_table.h  screens.h
game/menu/src/: menu.c  overlay.c  overlay_game_over.c  overlay_player_hud.c  overlay_stack.c  preset_create_elements.h  screen.c  screen_game.c  screen_preset_create.c  screen_title.c  title_elements.h
game/preset_manager/: CMakeLists.txt
game/preset_manager/include/: files.h
game/preset_manager/src/: files.c
game/raygui_implementation/: CMakeLists.txt  raygui_implementation.c
game/raygui_implementation/include/: raygui_styles.h
game/utils/: CMakeLists.txt
game/utils/include/: char_array.h
game/utils/src/: char_array.c
